# wsl-envidat-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.de.md  CONTRIBUTING.md  Dockerfile  README.de.md  README.md  SECURITY.de.md  SECURITY.md  claude_desktop_config.json  pyproject.toml  server.json  server.py  test_integration.py
.github/workflows/: ci.yml  container.yml  publish.yml
audits/2026-05-27T120439-Z-wsl-envidat-mcp/: audit-meta.json  audit-report.md  summary.json  verification-results.json
audits/2026-05-27T120439-Z-wsl-envidat-mcp/findings/: ARCH-002.md  ARCH-003.md  ARCH-006.md  ARCH-012.md  CH-004.md  OBS-001.md  OBS-003.md  OPS-001.md  OPS-002.md  OPS-003.md  SCALE-002.md  SEC-005.md  SEC-007.md  SEC-009.md  SEC-016.md  SEC-021.md
audits/2026-05-28T061441-Z-wsl-envidat-mcp/: RELEASE-v0.2.0.md  audit-meta.json  audit-report.md  profile.yaml  summary.json  verification-results.json
audits/2026-05-28T061441-Z-wsl-envidat-mcp/findings/: ARCH-002.md
src/wsl_envidat_mcp/: __init__.py  api_client.py  server.py
tests/: conftest.py  test_20_szenarien.py  test_integration.py  test_unit_security.py  test_unit_tools.py
workflows/: ci.yml
