[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wsl-envidat-mcp"
version = "0.1.0"
description = "MCP-Server für WSL/EnviDat – Umweltforschungs- und Monitoringdaten der Eidg. Forschungsanstalt für Wald, Schnee und Landschaft"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Hayal Oezkan", email = "hayal.oezkan@zuerich.ch" }
]
keywords = ["mcp", "wsl", "envidat", "umweltdaten", "wald", "biodiversitaet", "naturgefahren", "schweiz", "opendata"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "mcp>=1.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
wsl-envidat-mcp = "wsl_envidat_mcp.server:main"

[project.urls]
Homepage = "https://github.com/malkreide/wsl-envidat-mcp"
Repository = "https://github.com/malkreide/wsl-envidat-mcp"
Issues = "https://github.com/malkreide/wsl-envidat-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wsl_envidat_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
